BM-Main/x64/Debug/BM-Main.log
  avr-g++ -MM -MG -DF_CPU=16000000 -I./include -mmcu=atmega328p -Wall -Wextra -Wconversion -std=c++17 -Os -fconcepts  -fno-exceptions -fno-unwind-tables -fno-rtti -fno-threadsafe-statics  -funsigned-char -funsigned-bitfields -fshort-enums  main.cc | sed "s/main\.o/& main.d/g" > main.d
  avr-g++ -mmcu=atmega328p -Wall -Wextra -Wconversion -std=c++17 -Os -fconcepts  -fno-exceptions -fno-unwind-tables -fno-rtti -fno-threadsafe-statics  -funsigned-char -funsigned-bitfields -fshort-enums  -DF_CPU=16000000 -I./include  -c -o main.o main.cc
<<<<<<< HEAD
  In file included from main.cc:15:
ADC.h(77,1): warning G93EE9793: "/*" within comment [-Wcomment]
   /*ISR(ADC_vect)
    
  In file included from main.cc:14:
  pcd8544.h: In function 'void LcdInit()':
pcd8544.h(330,11): warning G04C62F8D: conversion from 'int' to 'uint8_t' {aka 'unsigned char'} may change value [-Wconversion]
    LCD_PORT &= ~(_BV(LCD_RST_PIN));
             ^
  pcd8544.h: In function 'void LcdUpdate()':
pcd8544.h(467,15): warning G04C62F8D: conversion from 'int' to 'char' may change value [-Wconversion]
    LcdSend(0x80 | (LoWaterMark % LCD_X_RES), LCD_CMD);
            ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
pcd8544.h(468,15): warning G04C62F8D: conversion from 'int' to 'char' may change value [-Wconversion]
    LcdSend(0x40 | (LoWaterMark / LCD_X_RES), LCD_CMD);
            ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
  pcd8544.h: In function 'void LcdSend(char, LcdCmdData)':
pcd8544.h(494,11): warning G04C62F8D: conversion from 'int' to 'uint8_t' {aka 'unsigned char'} may change value [-Wconversion]
    LCD_PORT &= ~(_BV(LCD_CE_PIN));
             ^
  In file included from main.cc:15:
  ADC.h: At global scope:
ADC.h(8,1): error G49BDF932: expected unqualified-id before '.' token
   .-namespace BMCPP
   ^
  In file included from main.cc:14:
pcd8544.h(302,14): warning G1AD04B87: 'LcdCacheIdx' defined but not used [-Wunused-variable]
   static int   LcdCacheIdx;
                ^~~~~~~~~~~
  make: *** [<builtin>: main.o] Error 1
C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\VC\VCTargets\Microsoft.MakeFile.Targets(44,5): error MSB3073: Der Befehl "make" wurde mit dem Code 2 beendet.
=======
  In file included from main.cc:12:0:
hal\port.h(47,20): warning G09FAF064: type qualifiers ignored on function return type [-Wignored-qualifiers]
               static volatile uint8_t read() {
                      ^~~~~~~~
  main.cc: In function 'int main()':
main.cc(58,25): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr+32);
                       ~~~~^~~
main.cc(60,25): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr+32);
                       ~~~~^~~
main.cc(62,26): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr + 32);
                       ~~~~~^~~~
main.cc(64,26): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr + 32);
                       ~~~~~^~~~
main.cc(66,26): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr + 32);
                       ~~~~~^~~~
main.cc(68,26): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr + 32);
                       ~~~~~^~~~
main.cc(70,26): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr + 32);
                       ~~~~~^~~~
main.cc(73,16): warning G7C671A4C: unused variable 'zzzz' [-Wunused-variable]
    constexpr int zzzz = 'P';
                  ^~~~
  In file included from main.cc:15:0:
  4X4_KeyPad.h: In instantiation of 'static unsigned char KeyPad<Port>::getKey() [with Port = BMCPP::Hal::Port<BMCPP::AVR::D>]':
  main.cc:89:16:   required from here
4X4_KeyPad.h(19,26): warning G63087B26: conversion to 'uint8_t {aka unsigned char}' from 'int' may alter its value [-Wconversion]
      Port::get() = ScanKey + 0x0F;         // Select 1-Row at a time for Scanning the Key
                    ~~~~~~~~^~~~~~
4X4_KeyPad.h(25,29): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
      ScanKey = (ScanKey << 1) + 0x10; // Rotate the ScanKey to SCAN the remaining Rows
                ~~~~~~~~~~~~~~~^~~~~~
4X4_KeyPad.h(28,13): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
     key = key + (ScanKey & 0xf0);  // Return the row and COL status to decode the key
           ~~~~^~~~~~~~~~~~~~~~~~
  avr-gcc -mmcu=atmega328p -Wall -Wextra -Wconversion -std=c11 -Os   -DF_CPU=16000000 -I./include  -Wl,-Map=main.map,--cref  "-Wl,--section-start=.mmcu=0x910000"  -o main.elf main.o
  ECHO ist ausgeschaltet (OFF).
  Creating load file for Flash: main.hex
  avr-objcopy -O ihex -R .flash main.elf main.hex
  avr-g++ -DF_CPU=16000000 -I./include -mmcu=atmega328p -Wall -Wextra -Wconversion -std=c++17 -Os -fconcepts  -fno-exceptions -fno-unwind-tables -fno-rtti -fno-threadsafe-statics  -funsigned-char -funsigned-bitfields -fshort-enums  -fverbose-asm -Wa,-adhln -S -o main.s main.cc
  In file included from main.cc:12:0:
hal\port.h(47,20): warning G09FAF064: type qualifiers ignored on function return type [-Wignored-qualifiers]
               static volatile uint8_t read() {
                      ^~~~~~~~
  main.cc: In function 'int main()':
main.cc(58,25): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr+32);
                       ~~~~^~~
main.cc(60,25): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr+32);
                       ~~~~^~~
main.cc(62,26): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr + 32);
                       ~~~~~^~~~
main.cc(64,26): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr + 32);
                       ~~~~~^~~~
main.cc(66,26): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr + 32);
                       ~~~~~^~~~
main.cc(68,26): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr + 32);
                       ~~~~~^~~~
main.cc(70,26): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
    display::printChar(yPtr + 32);
                       ~~~~~^~~~
main.cc(73,16): warning G7C671A4C: unused variable 'zzzz' [-Wunused-variable]
    constexpr int zzzz = 'P';
                  ^~~~
  In file included from main.cc:15:0:
  4X4_KeyPad.h: In instantiation of 'static unsigned char KeyPad<Port>::getKey() [with Port = BMCPP::Hal::Port<BMCPP::AVR::D>]':
  main.cc:89:16:   required from here
4X4_KeyPad.h(19,26): warning G63087B26: conversion to 'uint8_t {aka unsigned char}' from 'int' may alter its value [-Wconversion]
      Port::get() = ScanKey + 0x0F;         // Select 1-Row at a time for Scanning the Key
                    ~~~~~~~~^~~~~~
4X4_KeyPad.h(25,29): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
      ScanKey = (ScanKey << 1) + 0x10; // Rotate the ScanKey to SCAN the remaining Rows
                ~~~~~~~~~~~~~~~^~~~~~
4X4_KeyPad.h(28,13): warning G63087B26: conversion to 'unsigned char' from 'int' may alter its value [-Wconversion]
     key = key + (ScanKey & 0xf0);  // Return the row and COL status to decode the key
           ~~~~^~~~~~~~~~~~~~~~~~
>>>>>>> master
